--- a/contents/js_assignment.html
+++ b/contents/js_assignment.html
@@ -46,7 +46,23 @@
 
 
     <h3>Your solution for assignment</h3>
+    <input type="text" id="todo" placeholder="Todo">
+    <input id="addButton" type="button" value="Add" onclick="add()">
+    <input id="resetInputButton" type="button" value="Reset Input" onclick="resetInput()">
+    <ul id="todoList"></ul>
 
 </body>
-
+<script>
+    function add() {
+        let todo = document.getElementById('todo').value;
+        let todoList = document.getElementById('todoList');
+        todoList.innerHTML = `<li>${todo}</li>`;
+    }
+    function resetInput() {
+        document.getElementById('todo').value = '';
+    }
+    function clearAll() {
+        document.getElementById('todoList').innerHTML = '';
+    }
+</script>
 </html>
