--- a/contents/js_dom.html
+++ b/contents/js_dom.html
@@ -146,13 +146,13 @@
         <li>
             element.attribute: change the attribute value of html element
             <button id="btnChangeColor" style="color:red;"
-                onclick="document.getElementById('btnChangeColor').style.color='green';">change attribute</button>
+                onclick="document.getElementById('btnChangeColor').style.color='pink';">change attribute</button>
         </li>
 
         <li>
             element.setAttribute(attribute, value): change the attribute value of html element
             <button id="btnChangeColorByMethod" style="color:red;"
-                onclick="document.getElementById('btnChangeColorByMethod').setAttribute('style', 'color:blue;');">change
+                onclick="document.getElementById('btnChangeColorByMethod').setAttribute('style', 'color:skyblue;');">change
                 attribute</button>
         </li>
     </ul>
@@ -189,8 +189,8 @@
             document.getElementById(id).onchange = function(){code}
         </li>
 
-        <div onmouseover="this.innerHTML=';p';" onmouseout="this.innerHTML='mouse over me';"
-            onclick="document.writeln(Date());" style="background-color: lightblue; width: 150px; text-align: center;">
+        <div onmouseover="this.innerHTML='❤️';" onmouseout="this.innerHTML='mouse over me';"
+            onclick="document.writeln(Date());" style="background-color: rgb(153, 0, 255); width: 150px; text-align: center;">
             mouse over me
         </div>
     </ul>
